<resources>
    <string name="app_name">Notes&amp;Passwords</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="title_activity_landing">LandingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Notes</string>
    <string name="menu_slideshow">Passwords</string>
    <string name="logout">Logout</string>
    <string name="add_notes">Add Notes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_new_note">Create New Note</string>
    <string name="note_description">Note Description</string>
    <string name="note_title">Note Title</string>
    <string name="sample_text">sample text</string>
    <string name="nitin_pawar">Nitin Pawar</string>
    <string name="nitin_pawar150_gmail_com">nitin.pawar150@gmail.com</string>
    <string name="save_password">Save Password</string>
    <string name="site">Site</string>
    <string name="username">Username</string>
    <string name="google_login">Google Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>