<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.NotesPasswords.FullscreenContainer"
    tools:context=".ui.note.AddNoteFragment"
    android:layout_centerInParent="true">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/create_new_note"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="0dp"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteTitleField"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/note_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteDescriptionField"
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:hint="@string/note_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.NotesPasswords.ButtonBar.Fullscreen"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="420dp"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/noteSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Note"
                />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>